implemented contact page, began work on Portfolio page, updated CSS

--- a/assets/style.css
+++ b/assets/style.css
@@ -15,7 +15,25 @@ body {
     margin-top: 50px;
     background-color: white;
 }
+
+.page-content-header{
+    margin: 0px;
+    border-bottom: 2px solid darkgray;
+    padding: 10px;
+}
+
 .page-content-body{
     padding: 30px;
-
 }
+
+.about-me-img{
+    width: 450px;
+    height: 300px;
+    margin-right: 10px;
+}
+
+.portfolio-img{
+    width: 350px;
+    height: 350px;
+}
+
