--- a/assets/style.css
+++ b/assets/style.css
@@ -3,7 +3,7 @@ ul {
 }
 
 body {
-    background: url('https://cutewallpaper.org/21/professional-website-background/professional-images-for-website-background-13-Ride-Now-Pte-Ltd.jpg') no-repeat center center fixed;
+    background: url('images/Background.jpg') no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -30,6 +30,10 @@ body {
     width: 450px;
     height: 300px;
     margin-right: 10px;
+}
+
+.portfolio-row{
+    margin-bottom: 25px;
 }
 
 .portfolio-img{
